@@ -367,6 +367,7 @@ class UpdateSummaryEmail extends AbstractCallback
 				APATH_USER_CODE . '/ViewTemplates/Mailtemplates',
 			],
 		];
+		$container->language->loadLanguage($language ?: $container->appConfig->get('language', 'en-GB'));
 		$fakeView                = new Html($container);
 		$rendered                = '';
 
